--- a/css/style.css
+++ b/css/style.css
@@ -1,56 +1,70 @@
 @import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@400;500;600;700&display=swap');
-*{
+
+* {
     margin: 0;
     padding: 0;
     font-family: 'Hanken Grotesk', sans-serif;
 }
-body{
+
+body {
     overflow-x: hidden;
 }
-nav.navbar{
+
+nav.navbar {
     display: flex;
     background-color: #333;
     height: 100px;
     width: 100%;
-    justify-content:space-between; 
+    justify-content: space-between;
     overflow: hidden;
     position: fixed;
     z-index: 1000;
 }
-.navbar .logo h1{
+
+.navbar .logo h1 {
     font-size: 50px;
     color: #fff;
     line-height: 100px;
     margin-left: 100px;
 }
-.navbar ul.links{
+
+.navbar ul.links {
     display: flex;
     line-height: 60px;
     list-style: none;
     margin-right: 100px;
 }
-.navbar .links li{
+
+.navbar .links li {
     padding: 20px;
 }
-.navbar .links li a{
+
+.navbar .links li a {
     font-size: 20px;
     color: #fff;
     text-decoration: none;
 }
-.navbar i{
+
+.navbar i {
     font-size: 30px;
     color: #fff;
     line-height: 100px;
-} 
-.menu_open,.menu_close{
+}
+
+.menu_open,
+.menu_close {
     display: none;
 }
-@media(max-width:1000px){
-    .menu_open,.menu_close{ 
+
+@media(max-width:1000px) {
+
+    .menu_open,
+    .menu_close {
         display: block;
         margin-right: 100px;
     }
-    .navbar ul.links{
+
+    .navbar ul.links {
         display: none;
         position: absolute;
         /* display: block; */
@@ -63,21 +77,25 @@ nav.navbar{
         position: fixed;
         z-index: 10000;
     }
-    .navbar ul.links.active{
+
+    .navbar ul.links.active {
         right: -100px;
         display: block;
     }
 }
-.slide-container{
+
+.slide-container {
     position: relative;
     width: 100%;
 }
-.slide img{
+
+.slide img {
     width: 100%;
     height: 350px;
     size-adjust: auto;
 }
-.arrow{
+
+.arrow {
     cursor: pointer;
     position: absolute;
     top: 50%;
@@ -88,13 +106,16 @@ nav.navbar{
     font-size: 25px;
     font-weight: bold;
 }
-.next{
+
+.next {
     right: 10px;
 }
-.prev{
+
+.prev {
     left: 10px;
 }
-.caption{
+
+.caption {
     color: white;
     font-size: 30px;
     font-weight: bold;
@@ -105,19 +126,23 @@ nav.navbar{
     background-color: rgba(0, 0, 0, 0.5);
     padding: 15px 0px;
 }
-.slide{
+
+.slide {
     display: none;
 }
-.blogs-section{
+
+.blogs-section {
     position: relative;
     top: 100px;
 }
-.Blogs-section .container{
+
+.Blogs-section .container {
     width: 100%;
     min-height: 100vh;
     /* border: 5px solid red; */
 }
-.Blogs-section .blogs{
+
+.Blogs-section .blogs {
     width: 80%;
     margin: 0px auto;
     /* boder: 3px solid blue; */
@@ -126,55 +151,66 @@ nav.navbar{
     justify-content: center;
     align-items: center;
 }
-.Blogs-section .heading{
+
+.Blogs-section .heading {
     text-align: center;
     padding: 10px;
     margin: 10px auto;
 }
-.Blogs-section .heading h1{
+
+.Blogs-section .heading h1 {
     font-size: 40px;
     color: rgb(109, 158, 60);
 }
-.Blogs-section .heading h4{
+
+.Blogs-section .heading h4 {
     color: #777;
 }
-.Blogs-section .cards{
+
+.Blogs-section .cards {
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-gap: 8px;
 }
-.Blogs-section .cards .card{
+
+.Blogs-section .cards .card {
     height: 400px;
     width: 350px;
     margin: 30px 15px;
     /* border: 2px solid green; */
 }
-.Blogs-section .card img{
+
+.Blogs-section .card img {
     width: inherit;
     height: 200px;
 }
-.Blogs-section .card .tagline{
+
+.Blogs-section .card .tagline {
     font-size: 17px;
     color: #000;
     font-weight: 700;
     margin: 5px 10px;
 }
-.Blogs-section .tagline span{
+
+.Blogs-section .tagline span {
     color: #777;
 }
-.Blogs-section .title{
+
+.Blogs-section .title {
     color: blue;
     font-weight: 900;
     font-size: 20px;
     margin: 5px 10px;
 }
-.Blogs-section .card .content{
+
+.Blogs-section .card .content {
     margin: 5px 10px;
     font-size: 15px;
     color: #363333;
     line-height: 1.4;
 }
-.Blogs-section .card a{
+
+.Blogs-section .card a {
     text-decoration: none;
     padding: 5px 10px;
     margin: 15px 10px;
@@ -183,49 +219,60 @@ nav.navbar{
     font-size: 18px;
     border-radius: 10px;
 }
-.Blogs-section .card a:hover{
+
+.Blogs-section .card a:hover {
     background-color: blue;
 }
-@media(max-width:1252px){
-    .cards{
-        grid-template-columns: repeat(3,1fr);
+
+@media(max-width:1252px) {
+    .cards {
+        grid-template-columns: repeat(3, 1fr);
     }
 }
-@media(max-width:1070px){
-    .cards{
-        grid-template-columns: repeat(2,1fr);
+
+@media(max-width:1070px) {
+    .cards {
+        grid-template-columns: repeat(2, 1fr);
     }
 }
-@media(max-width:742px){
-    .cards{
-        grid-template-columns: repeat(1,1fr);
+
+@media(max-width:742px) {
+    .cards {
+        grid-template-columns: repeat(1, 1fr);
     }
 }
-.footer{
+
+.footer {
     position: relative;
     padding: 10px;
-    top:100px;
+    top: 100px;
 }
-.footer .container{
+
+.footer .container {
     max-width: 1170px;
     margin: auto;
 }
-.row{
+
+.row {
     display: flex;
     flex-wrap: wrap;
 }
-ul{
+
+ul {
     list-style: none;
 }
-.footer{
+
+.footer {
     background-color: #24262b;
     padding: 70px 0;
 }
-.footer-col{
+
+.footer-col {
     width: 25%;
     padding: 0px;
 }
-.footer-col h4{
+
+.footer-col h4 {
     font-size: 18px;
     color: #ffffff;
     text-transform: capitalize;
@@ -233,7 +280,8 @@ ul{
     font-weight: 500;
     position: relative;
 }
-.footer-col h4::before{
+
+.footer-col h4::before {
     content: '';
     position: absolute;
     left: 0;
@@ -243,10 +291,12 @@ ul{
     box-sizing: border-box;
     width: 50px;
 }
-.footer-col ul li:not(:last-child){
+
+.footer-col ul li:not(:last-child) {
     margin-bottom: 10px;
 }
-.footer-col ul li a{
+
+.footer-col ul li a {
     font-size: 16px;
     text-transform: capitalize;
     color: #ffffff;
@@ -256,11 +306,13 @@ ul{
     display: block;
     transition: all 0.3s ease;
 }
-.footer-col ul li a:hover{
+
+.footer-col ul li a:hover {
     color: #ffffff;
     padding-left: 8px;
 }
-.footer-col .social-links a{
+
+.footer-col .social-links a {
     display: inline-block;
     height: 40px;
     width: 40px;
@@ -272,55 +324,126 @@ ul{
     color: #ffffff;
     transition: all 0.5s ease;
 }
-.footer-col .social-links a:hover{
+
+.footer-col .social-links a:hover {
     color: #24262b;
     background-color: #ffffff;
 }
 
 /* responsive */
-@media(max-width: 767px){
+@media(max-width: 767px) {
     .footer-col {
         width: 50%;
         margin-bottom: 30px;
     }
 }
-@media(max-width: 574px){
+
+@media(max-width: 574px) {
     .footer-col {
         width: 100%;
     }
 }
-.container{
+
+.container {
     width: 100%;
 }
-.container .row{
+
+.container .row {
     width: 80%;
     margin: auto;
 }
-.container .row .header{
+
+.container .row .header {
     width: 60%;
     text-align: center;
     margin: auto;
 }
-.container .row .header h1{
+
+.container .row .header h1 {
     padding-top: 100px;
     font-size: 45px;
     color: #a96d0d;
 }
-.container .row .header p{
+
+.container .row .header p {
     margin-top: 15px;
     font-size: 18px;
-    line-height:  1.5;
+    line-height: 1.5;
     color: #8fa89c;
 }
-.content .card{
-    flex:1;
-    margin:50px 20px;
-    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1) ;
+
+.content .card {
+    flex: 1;
+    margin: 50px 20px;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
     background-color: #fff5f5;
 }
-.content .card img{
+
+.content .card img {
     width: 100%;
     padding: 10px;
     height: 350px;
 
+}
+
+/***************************** SINGLE BLOG  **************************/
+.single-blog {
+    position: relative;
+    top: 100px;
+    width: 100%;
+    min-height: 100vh;
+}
+
+.single-blog .container {
+    width: 80%;
+    min-height: inherit;
+    margin: auto;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.single-blog .container h1 {
+    text-align: center;
+    padding: 10px;
+    margin: 20px;
+    font-size: 35px;
+}
+
+.single-blog .container img {
+    height: 300px;
+    width: 500px;
+}
+
+.single-blog .container .description {
+    padding: 18px;
+    margin: 20px;
+}
+
+.single-blog .container .author {
+    padding: 20px;
+    margin: 10px;
+    align-self: start;
+    text-align: left;
+}
+
+.single-blog .container .author h2,
+h3 {
+    padding: 10px;
+}
+
+@media screen and (max-width: 570px) {
+    .single-blog .container img {
+        height: 250px;
+        width: 350px;
+    }
+}
+
+@media screen and (max-width: 420px) {
+    .single-blog .container img {
+        height: 200px;
+        width: 300px;
+    }
 }
